--- a/src/main/resources/templates/layouts/editview/editOpenIndent.html
+++ b/src/main/resources/templates/layouts/editview/editOpenIndent.html
@@ -132,7 +132,7 @@
 													<label for="inputPassword4">Indent Date</label> <input
 														type="date" class="form-control" id="indentDate"
 														placeholder="Indent Date" title="indent date"
-														th:field="*{indentDate}" readonly>
+														th:field="*{indentDate}">
 												</div>
 
 
