--- a/src/main/resources/templates/layouts/editview/editCompany.html
+++ b/src/main/resources/templates/layouts/editview/editCompany.html
@@ -70,7 +70,7 @@
 
 					<!-- form start -->
 					<form id="companyDetail" class="wizard wizard-primary" role="form"
-						th:action="@{/companydetail/}" th:object="${company}"
+						th:action="@{/companydetail/update}" th:object="${company}"
 						method="POST">
 
 						<div class="row">
@@ -200,9 +200,8 @@
 																	<div class="form-group col-md-4">
 																		<label for="inputPassword4">PF Number</label> <input
 																			type="text" class="form-control"
-																			pattern="[a-zA-Z0-9-]+" placeholder="Pf Number"
-																			th:field="*{pfNumber}" title="pf number"
-																			onkeypress="return alpha(event)">
+																			placeholder="Pf Number"  maxlength="20"
+																			th:field="*{pfNumber}" title="pf number">
 																	</div>
 																	<!-- <div class="form-group col-md-4">
 																		<label for="inputPassword4">Parent Code</label> <input
@@ -226,7 +225,7 @@
 																	<div class="form-group col-md-4">
 																		<label for="inputPassword4">ESI Number</label> <input type="text"
 																			class="form-control" title="esi number"
-																			id="esiNumber" placeholder="Esi Number"
+																			id="esiNumber" placeholder="Esi Number" maxlength="10"
 																			onkeypress="if ( isNaN(this.value + String.fromCharCode(event.keyCode) )) return false;"
 																			th:field="*{esiNo}">
 																	</div>
