--- a/src/main/resources/templates/layouts/editview/editUnit.html
+++ b/src/main/resources/templates/layouts/editview/editUnit.html
@@ -12,16 +12,6 @@
 	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
 	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-
-	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
-	<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.js"></script>
-
-
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
-		rel="stylesheet" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
-
 
 </head>
 
@@ -71,14 +61,13 @@
 									</div>
 									<!-- /.box-header -->
 									<!-- form start -->
-									<form id="categoryForm" role="form" method="POST" th:action="@{/unit/}"
+									<form id="categoryForm" role="form" method="POST" th:action="@{/unit/update}"
 										th:object="${unit}">
 										<div class="box-body">
 
 											<div class="form-group col-md-6">
-												<label for="inputEmail4">Unit Code</label> <span
-													style="color: red">*</span><input type="text" class="form-control"
-													placeholder="Category Code" title="This field is required"
+												<label for="inputEmail4">Unit Code</label> <input type="text"
+													class="form-control" placeholder="Category Code" title="unit code"
 													th:field="*{unitCode}">
 											</div>
 											<div class="form-group col-md-6">
@@ -96,22 +85,15 @@
 													th:field="*{addr}">
 											</div>
 
-											<label class="checkbox-inline"> <input type="radio" value="Y" name="active"
-													checked style="margin-left: 5px">Active <input type="radio"
-													value="N" name="active" style="margin-left: 5px">In-Active
-											</label>
-
 										</div>
 										<!-- /.box-body -->
 
-										<div class="box-footer" style="margin: 10px">
+										<div class="box-footer" style="margin: 4px">
 											<input type="submit" value="Submit" class="btn btn-primary" />
-											<input type="reset" value="Reset" class="btn btn-danger" />
+											<input type="button" value="Go Back" onclick="history.back()"class="btn btn-danger" />
 										</div>
 
-										<div style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/unit/list}">view all unit</a>
-										</div>
+										
 
 
 									</form>
@@ -135,55 +117,12 @@
 		</div>
 
 	</div>
-
-	<!-- <div th:replace="fragments/footer :: footer">...</div> -->
-	<!--   <section class="content">
-	
-	
-	
-	
-        
-        </section>-->
-
-
-
-	<script>
-
-				$(document).ready(function () {
-					var message = document.getElementById('mess').value
-					if (message != null && message !== "") {
-
-						swal(message, "", "success", {
-							button: "OK",
-							hideClass: {
-								popup: 'animate__animated animate__fadeOutUp'
-							},
-						});
-					} else {
-						console.log("ajax request : " + message);
-					}
-
-				});
-			</script>
-
-
-
-
-
-
-
-
-
-
-	<script src="js/jQuery-2.1.4.min.js"></script>
-
-	<script src="js/bootstrap.min.js"></script>
-
-	<script src="js/fastclick.min.js"></script>
-
-	<script src="js/app.min.js"></script>
-
-	<script src="/js/demo.js"></script>
+	</section>-->
+	<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
 
 </html>
